# wagon

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  clippy.toml  decisions.txt  test.wag  wagon.sublime-project  wagon.sublime-workspace
.gitea/workflows/: doc.yaml
.github/workflows/: docs.yml
gll_test/: Cargo.toml
gll_test/src/: main.rs  terminals.rs
gll_test/src/terminals/: A.rs  B.rs  C.rs  D.rs  E.rs  F.rs  G.rs  S.rs
gll_test/src/terminals/A/: A_0_0.rs  A_0_1.rs  A_0_2.rs  A_1_0.rs
gll_test/src/terminals/B/: B_0_0.rs  B_0_1.rs  B_0_2.rs  B_1_0.rs
gll_test/src/terminals/C/: C_0_0.rs  C_0_1.rs  C_1_0.rs  C_1_1.rs
gll_test/src/terminals/D/: D_0_0.rs  D_0_1.rs  D_1_0.rs  D_1_1.rs
gll_test/src/terminals/E/: E_0_0.rs  E_0_1.rs  E_1_0.rs  E_1_1.rs  E_1_2.rs  E_1_3.rs  E_2_0.rs  E_2_1.rs  E_3_0.rs  E_3_1.rs  E_3_2.rs  E_3_3.rs
gll_test/src/terminals/F/: F_0_0.rs
gll_test/src/terminals/G/: G_0_0.rs
gll_test/src/terminals/S/: S_0_0.rs  S_0_1.rs  S_1_0.rs  S_1_1.rs
src/: codegen.rs  firstpass.rs  gll.rs  helpers.rs  lexer.rs  main.rs  parser.rs
src/codegen/: assignment.rs  atom.rs  comp.rs  conjunct.rs  disjunct.rs  expression.rs  factor.rs  inverse.rs  metadata.rs  rhs.rs  rule.rs  sum.rs  symbol.rs  term.rs  wag.rs
src/gll/: descriptor.rs  gss.rs  ident.rs  sppf.rs  state.rs
src/helpers/: binary_children.rs
src/lexer/: ident.rs  lexer.rs  math.rs  mod.rs  productions.rs
src/parser/: assignment.rs  ast.rs  atom.rs  chunk.rs  comp.rs  conjunct.rs  disjunct.rs  expression.rs  factor.rs  helpers.rs  ident.rs  inverse.rs  metadata.rs  rhs.rs  rule.rs  sum.rs  symbol.rs  term.rs  terminal.rs  wag.rs
wagon/: Cargo.toml
wagon-bin/: Cargo.toml
wagon-bin/src/: main.rs
wagon-codegen/: Cargo.toml  README.md
wagon-codegen-gll/: Cargo.toml
wagon-codegen-gll/src/: inverse.rs  lib.rs  nodes.rs  rhs.rs  rule.rs  state.rs  wag.rs
wagon-codegen-gll/src/nodes/: assignment.rs  metadata.rs  rhs.rs  rule.rs  symbol.rs  wag.rs
wagon-codegen/src/: assignment.rs  atom.rs  comp.rs  conjunct.rs  disjunct.rs  expression.rs  factor.rs  filestructure.rs  inverse.rs  lib.rs  metadata.rs  nodes.rs  rhs.rs  rule.rs  sum.rs  symbol.rs  term.rs  value.rs
wagon-codegen/src/nodes/: atom.rs  comp.rs  conjunct.rs  disjunct.rs  expression.rs  factor.rs  inverse.rs  sum.rs  term.rs
wagon-gll/: Cargo.toml  README.md
wagon-gll/src/: descriptor.rs  gss.rs  label.rs  lib.rs  slot.rs  sppf.rs  state.rs  value.rs
wagon-ident/: Cargo.toml  NOTICE  README.md
wagon-ident/src/: lib.rs
wagon-lexer/: Cargo.toml  README.md
wagon-lexer/src/: ident.rs  lib.rs  math.rs  metadata.rs  productions.rs
wagon-macros/: Cargo.toml  README.md
wagon-macros/src/: lib.rs
wagon-parser/: Cargo.toml  README.md
wagon-parser/src/: ast.rs  firstpass.rs  lib.rs  parser.rs
wagon-parser/src/parser/: assignment.rs  atom.rs  chunk.rs  comp.rs  conjunct.rs  disjunct.rs  expression.rs  factor.rs  helpers.rs  ident.rs  inverse.rs  metadata.rs  rhs.rs  rule.rs  sum.rs  symbol.rs  term.rs  terminal.rs  wag.rs
wagon-utils/: Cargo.toml  README.md
wagon-utils/src/: fallible_itertools.rs  lib.rs  peek.rs  peekable.rs
wagon-utils/src/fallible_itertools/: extrema_set.rs
wagon-value/: Cargo.toml  README.md
wagon-value/src/: lib.rs  result.rs  value.rs  valueable.rs
wagon/src/: lib.rs
