[package]
name = "wagon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
logos-derive = "0.13.0"
petgraph = {version = "0.6.3", default-features = false}
wagon-macros = { path = "./wagon-macros"}
logos-display = "0.1.2"
ordered-float = "3.9.1"
quote = "1.0.33"
proc-macro2 = "1.0.67"
cached = "0.46.0"
prettyplease = "0.2.15"
syn = "2.0.38"
wagon-gll = { version = "0.1.0", path = "../wagon_gll" }
indexmap = "2.0.2"
subprocess = "0.2.9"
ariadne = {version = "0.3.0", features = ["auto-color"]}

[dev-dependencies]
pretty_assertions = "1.4.0"
