[workspace]
members = [
	"wagon-bin",
	"wagon-codegen",
	"wagon-gll",
	"wagon-ident",
	"wagon-lexer",
	"wagon-macros",
	"wagon-parser",
	"wagon-utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Rafael Dulfer"]
repository = "https://gitlab.utwente.nl/s1945785/wagon"
license = "MIT"
edition = "2021"
keywords = ["parsing", "gll", "weighted attribute grammar"]
categories = ["data-structures", "parser-implementations", "parsing", "compilers"]

[workspace.dependencies]
# common dependencies
syn = "2.0.38"
quote = "1.0.33"
proc-macro2 = "1.0.67"
petgraph = {version = "0.6.3", default-features = false}
indexmap = "2.0.2"
ordered-float = "3.9.1"

# local crates
wagon-codegen = {path = "./wagon-codegen"}
wagon-codegen-gll = {path = "./wagon-codegen-gll"}
wagon-gll = {path = "./wagon-gll"}
wagon-ident = {path = "./wagon-ident"}
wagon-lexer = {path = "./wagon-lexer"}
wagon-macros = {path = "./wagon-macros"}
wagon-parser = {path = "./wagon-parser"}
wagon-utils = {path = "./wagon-utils"}

# For tests
pretty_assertions = "1.4.0"
assert-tokenstreams-eq = "0.1.0"
