[workspace]
members = [
	"wagon-codegen",
	"wagon-ident",
	"wagon-lexer",
	"wagon-macros",
	"wagon-parser",
	"wagon-utils",
	"wagon-value",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Rafael Dulfer"]
repository = "https://github.com/Rafaeltheraven/wagon"
license = "Apache-2.0"
edition = "2021"
keywords = ["parsing", "gll", "weighted attribute grammar"]
categories = ["data-structures", "parser-implementations", "parsing", "compilers"]
license-file = "./LICENSE"
documentation = "https://dulfer.be/wagon/"

[workspace.dependencies]
# common dependencies
syn = "2.0.38"
quote = "1.0.33"
proc-macro2 = "1.0.67"
petgraph = {version = "0.6.3", default-features = false}
indexmap = "2.0.2"
ordered-float = "3.9.1"
replace_with = "0.1.7"
derivative = "2.2.0"
regex-automata = "0.4.5"
itertools = "0.12.1"
thiserror = "1.0.57"

# local crates
wagon-codegen = {path = "./wagon-codegen", version="=1.0.0"}
wagon-ident = {path = "./wagon-ident", version="=1.0.0"}
wagon-lexer = {path = "./wagon-lexer", version="=1.0.0"}
wagon-macros = {path = "./wagon-macros", version="=1.0.0"}
wagon-parser = {path = "./wagon-parser", version="=1.0.0"}
wagon-utils = {path = "./wagon-utils", version="=1.0.0"}
wagon-value = {path = "./wagon-value", version="=1.0.0"}

# For tests
pretty_assertions = "1.4.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
enum_glob_use = "deny"
pedantic = "warn"
nursery = "deny"
unwrap_used = "deny"
expect_used = "warn"
module_name_repetitions = "allow"
panic = "warn"
