[package]
name = "gll_test"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
clap = { version = "4.4.8", features = ["derive", "cargo"] }
itertools = "0.12.0"
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0.108"
subprocess = "0.2.9"
wagon-gll = { version = "0.1.0", path = "../wagon-gll" }
wagon-ident = { version = "0.1.0", path = "../wagon-ident" }
