[package]
name = "wagon"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true
description = "The main binary for WAGon."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wagon-parser = {workspace = true}
wagon-codegen-gll = {workspace = true}
quote = {workspace = true}
proc-macro2 = {workspace = true}
syn = {workspace = true}
prettyplease = "0.2.15"
ariadne = {version = "0.3.0", features = ["auto-color"]}
