[package]
name = "wagon-bin"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true
description = "The main binary for WAGon."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wagon-parser = {workspace = true}
wagon-codegen-gll = {workspace = true}
wagon-codegen = {workspace = true}
wagon-utils = {workspace = true}
clap = { version = "4.4.8", features = ["derive", "cargo"] }
prettyplease = "0.2.15"

[lints]
workspace = true
