[package]
name = "wagon-codegen"
version = "1.0.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Generic code generation methods for the WAGon DSL that can be used for various purposes."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wagon-parser = {workspace = true}
wagon-ident = {workspace = true}
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true}
ordered-float = {workspace = true}
prettyplease = "0.2.16"

[lints]
workspace = true
