[package]
name = "wagon-ident"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true
description = "Ident struct for WAGon. Used in various crates for various reasons"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = {workspace = true}
proc-macro2 = {workspace = true}

[lints]
workspace = true
