[package]
name = "wagon-ident"
version = "1.0.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
documentation.workspace = true
description = "Ident struct for WAGon. Used in various crates for various reasons"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = {workspace = true}
proc-macro2 = {workspace = true}

[lints]
workspace = true
