[package]
name = "wagon-lexer"
version = "1.0.0"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true
documentation.workspace = true
description = "Lexer for the wagon DSL."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.13.0"
logos-derive = "0.13.0"
logos-display = "0.1.2"
wagon-ident = {workspace = true}
wagon-utils = {workspace = true}
wagon-macros = {workspace = true}
replace_with = {workspace = true}

[dev-dependencies]
pretty_assertions = {workspace = true}

[lints]
workspace = true

[features]
test = ["wagon-macros/test"]
