[package]
name = "wagon-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.18"
quote = "1.0.28"
proc-macro2 = "1.0.59"
logos = "0.13.0"
extendable-data = "0.1.2"

[lib]
proc-macro = true