[package]
name = "wagon-macros"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true
description = "Procedural macros for WAGon."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {workspace = true, features = ["extra-traits", "full"]}
quote = {workspace = true}
proc-macro2 = {workspace = true}
extendable-data = "0.1.5"
paste = "1.0.14"

[dev-dependencies]
wagon-utils = {workspace = true}

[lib]
proc-macro = true

[lints]
workspace = true

[features]
test = []
