[package]
name = "wagon-parser"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true
description = "Parser for the WAGon DSL."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wagon-lexer = {workspace = true}
wagon-ident = {workspace = true}
wagon-utils = {workspace = true}
wagon-macros = {workspace = true}
wagon-value = {workspace = true}
ordered-float = {workspace = true}
petgraph = {workspace = true}
indexmap = {workspace = true}
quote = {workspace = true}
derivative = {workspace = true}
regex-automata = {workspace = true}
regex-syntax = "0.8.2"

[dev-dependencies]
pretty_assertions = {workspace = true}

[lints]
workspace = true
